# celrix

./: .gitignore  Cargo.toml  Dockerfile  README.md
clients/go/: client.go  go.mod
clients/go/examples/basic/: main.go
clients/python/: setup.py
clients/python/celrix/: __init__.py  client.py
clients/rust/: Cargo.toml
clients/rust/examples/: basic.rs  stress.rs
clients/rust/src/: lib.rs
clients/typescript/: package-lock.json  package.json  tsconfig.json
clients/typescript/src/: index.ts  test.ts
deploy/helm/celrix/: Chart.yaml  values.yaml
deploy/kubernetes/: celrix.yaml
deploy/prometheus/: alerts.yaml
deploy/terraform/aws/: main.tf
src/: lib.rs  metrics.rs
src/cluster/: mod.rs  node.rs  raft.rs  replication.rs  sharding.rs
src/disaster_recovery/: failover.rs  geo.rs  mod.rs  recovery.rs
src/observability/: admin.rs  health.rs  loadtest.rs  mod.rs  prometheus_metrics.rs
src/persistence/: aof.rs  mod.rs  snapshot.rs
src/protocol/: codec.rs  command.rs  extended_commands.rs  frame.rs  mod.rs  response.rs
src/security/: acl.rs  audit.rs  auth.rs  mod.rs  tls.rs
src/server/: buffer_pool.rs  command_queue.rs  config.rs  handler.rs  mod.rs  worker_pool.rs
src/storage/: concurrent_store.rs  concurrent_ttl.rs  eviction.rs  mod.rs  store.rs  ttl.rs
src/vector/: embedding_store.rs  mod.rs  semantic.rs  similarity.rs
tests/integration/: full_suite.py
