[package]
name = "celrix"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Yasser <YASSERRMD>"]
description = "High-Performance In-Memory Cache Database - 5-10x Faster Redis Alternative"
license = "MIT"
repository = "https://github.com/YASSERRMD/celrix"
keywords = ["cache", "database", "redis", "high-performance", "in-memory"]
categories = ["database-implementations", "caching"]

[[bin]]
name = "celrix-server"
path = "src/bin/celrix-server.rs"

[[bin]]
name = "celrix-cli"
path = "src/bin/celrix-cli.rs"

[lib]
name = "celrix"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Buffer management
bytes = "1.9"

# High-performance HashMap
hashbrown = "0.15"

# Lock-free concurrent data structures (Phase 2)
dashmap = "6.1"
crossbeam = "0.8"
parking_lot = "0.12"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time utilities
chrono = "0.4"

# Core affinity for worker threads (Phase 2)
core_affinity = "0.8"

# Number of CPUs
num_cpus = "1.16"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
